--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@ box-sizing: border-box;
   margin: auto;
 }
 
+.body--dark {
+  background: #1E2939;
+}
+
 .container {
   width: 100%;
   margin: auto;
